--- a/Website/css/style.css
+++ b/Website/css/style.css
@@ -15,12 +15,12 @@ body {
 }
 
 ::selection {
-    background-color: #061c42;
+    background-color: #3b5998;
     color: #ffffff;
 }
 
 ::-moz-selection {
-    background-color: #061c42;
+    background-color: #3b5998;
     color: #ffffff;
 }
 
@@ -82,7 +82,7 @@ fieldset {
 .section-title h2 {
     margin-top: 0;
     font-weight: 600;
-    border-bottom: 8px double #061c42;
+    border-bottom: 8px double #3b5998;
 	border-radius: 25px;
     font-size: 30px;
     margin: 0 auto;
@@ -157,7 +157,7 @@ fieldset {
 .button-style:hover,
 .button-style:active,
 .button-style:focus {
-	background: #061c42;
+	background: #3b5998;
 	color: #ffffff !important;
 }
 
@@ -222,7 +222,7 @@ body.loaded #preloader{
     margin: -75px 0 0 -75px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #061c42;
+    border-top-color: #3b5998;
     -webkit-animation: spin 2s linear infinite;
     animation: spin 2s linear infinite;
 }
@@ -236,7 +236,7 @@ body.loaded #preloader{
     bottom: 5px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #061c42;
+    border-top-color: #3b5998;
     -webkit-animation: spin 3s linear infinite;
     animation: spin 3s linear infinite;
 }
@@ -250,7 +250,7 @@ body.loaded #preloader{
     bottom: 15px;
     border-radius: 50%;
     border: 3px solid transparent;
-    border-top-color: #061c42;
+    border-top-color: #3b5998;
     -webkit-animation: spin 1.5s linear infinite;
     animation: spin 1.5s linear infinite;
 }
@@ -336,6 +336,27 @@ body.loaded #preloader{
 	margin-bottom: 20px;
 }
 
+.intro-social {
+	display: block;
+	width: 100%;
+	left: 0;
+	bottom: 7.2rem;
+	font-size: 3.3rem;
+	margin: 0 auto;
+	padding-top: 5rem;
+}
+.intro-social li {
+	display: inline-block;
+	margin: 0 20px;
+	padding: 0;
+}
+.intro-social li a, .intro-social li a:visited {
+	color: #FFFFFF;
+}
+.intro-social li a:hover, .intro-social li a:focus {
+	color: #3b5998;
+}
+
 .typed-cursor{
     opacity: 1;
     -webkit-animation: blink 0.7s infinite;
@@ -419,7 +440,7 @@ body.loaded #preloader{
 .navigation-background {
     -webkit-transition: all 0.3s ease-out;
     transition: all 0.3s ease-out;
-    background: #061c42;
+    background: #3b5998;
 }
 
 .navigation-background .logo {
@@ -502,7 +523,7 @@ ul.portfolio li:hover {
 
 ul.portfolio li.active {
     color: #ffffff;
-    background-color: #061c42;
+    background-color: #3b5998;
     padding: 5px 20px;
     border-radius: 20px;
     box-shadow: 0px 1px 2px 0px rgba(90, 91, 95, 0.15);
@@ -541,7 +562,7 @@ ul.portfolio li.active {
   opacity: 0;
   left: 0%;
   right: 0%;
-  background-color: #061c42;
+  background-color: #3b5998;
   width: 70px;
   height: 70px;
   border-radius: 50%;
@@ -558,7 +579,7 @@ ul.portfolio li.active {
 .mfp-image-holder .mfp-close, .mfp-iframe-holder .mfp-close {
 	margin-top: 40px;
     font-size: 50px;
-    background-color: #061c42;
+    background-color: #3b5998;
     width: 44px;
 	right: 0px;
 }
@@ -630,14 +651,14 @@ ul.portfolio li.active {
 }
 
 .form-control:focus {
-	border-color: #061c42;
+	border-color: #3b5998;
 	border-width: 2px;
 }
 
 .map {
     width: 100%;
     height: 340px;
-    border: 1px solid #061c42;
+    border: 1px solid #3b5998;
 }
 
 
@@ -703,7 +724,7 @@ ul.portfolio li.active {
 /* Footer */
 
 .footer-section {
-    background: #061c42;
+    background: #3b5998;
     padding: 80px 0px;
     color: #f8f8f8;
 }
@@ -732,6 +753,14 @@ ul.portfolio li.active {
 	.navigation-background .logo {
 		padding-top: 28px;
 	}
+
+		.intro-social {
+		font-size: 2.5rem;
+	}
+	.intro-social li {
+		margin: 0 10px;
+	}
+
 }
 
 
@@ -772,10 +801,10 @@ ul.portfolio li.active {
         padding: 11px 15px;
     }
     .navigation-menu .navbar-nav li a:hover {
-        color: #061c42;
+        color: #3b5998;
     }
     .navigation-background .navigation-menu .navbar-nav li a:hover {
-        color: #061c42;
+        color: #3b5998;
     }
     .navigation-background .navigation-menu .navbar-nav li a {
         padding: 11px 15px;
@@ -818,6 +847,13 @@ ul.portfolio li.active {
     .contact-us-detail {
         margin-bottom: 30px;
     }
+
+    	.intro-social {
+		font-size: 3rem;
+	}
+	.intro-social li {
+		margin: 0 15px;
+	}
 }
 
 
@@ -887,7 +923,7 @@ ul.portfolio li.active {
 
 .scroll-to-top:hover,
 .scroll-to-top:focus {
-    background-color: #061c42;
+    background-color: #3b5998;
     color: #ffffff;
 }
 
@@ -1180,7 +1216,7 @@ ul.portfolio li.active {
 /* Background Color */
 
 .bg-color-1 {
-	background-color: #061c42;
+	background-color: #3b5998;
 }
 
 .bg-color-2 {
